--- a/pom.xml
+++ b/pom.xml
@@ -82,9 +82,9 @@
 
         <!--小米-->
         <dependency>
-            <groupId>com.xiaomi.miliao</groupId>
-            <artifactId>xmpush-server-api</artifactId>
-            <version>0.0.7</version>
+            <groupId>com.ztjy</groupId>
+            <artifactId>MiPush</artifactId>
+            <version>2.2.21</version>
         </dependency>
 
         <!--友盟-->
@@ -113,6 +113,19 @@
             <groupId>cn.jpush.api</groupId>
             <artifactId>jpush-client</artifactId>
             <version>3.3.9</version>
+        </dependency>
+
+        <!--vivo-->
+        <dependency>
+            <groupId>com.vivo</groupId>
+            <artifactId>vpush-server-sdk</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.firebase</groupId>
+            <artifactId>firebase-admin</artifactId>
+            <version>6.8.1</version>
         </dependency>
 	</dependencies>
 
