--- a/pom.xml
+++ b/pom.xml
@@ -132,6 +132,12 @@
             <artifactId>firebase-admin</artifactId>
             <version>6.8.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.61</version>
+        </dependency>
 	</dependencies>
 
 	<build>
